# dataqa-lib

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Makefile  README.md  TODO.md  backlog.md  ci_cd_test_report.json  digest-new.txt  digest-pre-cleanup.txt  digest-v2.txt  digest.txt  ext-dataqa-core.txt  jules.yml  mkdocs.yml  notes.txt  poetry.toml  pyproject.toml  pytest.ini
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md  testing-commands.md
config/: analytics_agent.yaml  basic_agent.yaml  development_agent.yaml  enterprise_agent.yaml  example_agent.yaml
dataqa/: __init__.py  memory.py  state.py
dataqa/agent/: base.py
dataqa/benchmark/: README.md  __init__.py  amap.py  llm_judge_prompt.py  log.py  parse_output.py  run_test.py  run_test_w_different_configs.py  schema.py  test_pipeline.py  utils.py
dataqa/components/: base_component.py  gather.py
dataqa/core/: client.py  errors.py  memory.py
dataqa/data_models/: asset_models.py
dataqa/dbc/: __init__.py  client.py  errors.py  llm.py  models.py  resource_manager.py  sql_executor.py  storage.py
dataqa/integrations/: __init__.py
dataqa/llm/: base_llm.py  gemini.py  openai.py
dataqa/pipelines/: constants.py  schema.py
dataqa/services/: storage.py
dataqa/templates/: cwd_agent_structure_template.yml  default_graph_config.yml  examples.yml  rules.yml  schema.yml
dataqa/tools/: __init__.py  utils.py
dataqa/ui/: app.py
dataqa/utils/: agent_util.py  asset_formatter.py  component_utils.py  in_memory_knowledge.py  ingestion.py  langgraph_utils.py  schema_util.py  utils.py
dev_prompts/: agent-config-driven.md  agent_code.txt  claude.txt  claude_config.yaml  develop-code.txt  docs  docs.md  exceutor.txt  gemini-2.5pro-2.txt  gemini-2.5pro.txt  gemini-research-2.md  gemini-research.txt  gemini_config.yaml  idea.txt  library-generated-plan.md  library-struct-2.txt  library-struct-gemini-2.md  library-struct-gemini.md  library-struct-generated-prompt.md  library-struct.txt  oai-deepresearch.md  oai-reasoning.md  refine-idea-small.txt  refine-idea.txt  refined-gemini2.5.md  test.ipynb  tools.py
docs/: README.md  api-reference.md  changelog.md  configuration.md  contributing.md  getting-started.md  index.md  installation.md  quickstart.md  troubleshooting.md
docs/guide/: benchmarking.md  building_assets.md  building_your_first_agent.md  configuring_your_agent.md  creating_knowledge_assets.md  customizing_agents.md  deployment.md  evaluating_your_agent.md  extending.md  faq.md  introduction.md  knowledge_asset_tools.md  running_examples.md  troubleshooting.md  trying_the_examples.md  understanding_the_cwd_agent.md
docs/reference/: agent.md  agent_config.md  assets.md  benchmark.md  components.md  index.md  pieplines.md  tools.md
examples/: api_usage.py  end_to_end_examples.py
scripts/: demo_config.py  setup-uv.sh  validate_assets.py
src/dataqa/: __init__.py  api.py  exceptions.py  logging_config.py
tests/: __init__.py  test_api.py  test_api_integration.py  test_dbc_client.py  test_error_handling_integration.py  test_exceptions.py  test_logging_config.py  test_retry.py
tests/agent/: __init__.py  test_approval_workflow.py  test_data_agent_integration.py  test_integration.py  test_nodes.py  test_state.py  test_workflow.py
tests/cli/: __init__.py  test_main.py
tests/config/: __init__.py  test_loader.py  test_models.py
tests/fixtures/: __init__.py  synthetic_data.py
tests/integration/: __init__.py  test_ci_cd_suite.py  test_end_to_end.py  (+1 more)
(+218 files in other folders)
