[project]
name = "dataqa"
version = "0.1.0"
description = "Data Q&A Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "faker>=37.1.0",
    "gitingest>=0.1.4",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.8.2",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.3",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.1.9",
    "pyspark>=4.0.0",
    "langchain[google-genai]>=0.3.27",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]


[tool.setuptools.packages.find]
include = ["dataqa"]
